--- a/src/objects/BoardGame/style.css
+++ b/src/objects/BoardGame/style.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
