--- a/src/objects/ScoreBoard/style.css
+++ b/src/objects/ScoreBoard/style.css
@@ -1,10 +1,9 @@
-header {
+.score-board {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-self: center;
-  padding: 0 20px;
-  margin: 20px 0;
+  padding: 2.5rem 0;
   height: 20px;
   background-color: orange;
 }
