--- a/src/components/CardFrontBack/style.css
+++ b/src/components/CardFrontBack/style.css
@@ -1,3 +1,36 @@
 .card-front-back {
-  
+  cursor: pointer;
+  --width: 130px;
+  --height: 160px;
+  width: var(--width);
+  height: var(--height);
+  transform-style: preserve-3d;
+  position: relative;
+  transition: transform 0.3s ease-in-out;
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front-back .card-front {
+  transform: rotateY(0deg);
+}
+
+.card-front-back .card-back {
+  transform: rotateY(180deg);
+}
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+.card-front-back > .card-back > .card-game {
+  background: var(--fiery-rose);
 }
