:construction: create and add PlayerScore component

--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -2,6 +2,8 @@
   --color-alura: #051932;
   --pomb-and-power: #7C5E99;
   --arsenic: #3A4042;
+  --old-silver: #828282;
   --fiery-rose: #F25A70;
   --floral-white: #FFFCEE;
+  --sandstorm: #F5D547;
 }
