--- a/src/objects/ScoreBoard/style.css
+++ b/src/objects/ScoreBoard/style.css
@@ -3,6 +3,6 @@
   align-items: center;
   justify-content: space-evenly;
   align-self: center;
-  padding: 2.5rem 0;
-  height: 20px;
+  padding: 1rem 0;
+  height: 2rem;
 }
